--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,7 +2,6 @@ html,
 body {
   margin: 0%;
   height: 100%;
-  background-color: grey;
 }
 
 /* NAVIGATION BAR */
@@ -43,15 +42,17 @@ body {
   background-repeat: no-repeat;
   background-size: auto;
   background-attachment: scroll;
+  color: white;
 }
 
 /* Gray background behind what we stand for */
 .white-background-container {
   background-color: rgb(255, 255, 255);
+
   position: absolute;
-  float: ;
-  z-index: 1;
-  margin: 10px 10px;
+  z-index: 2;
+  width: 90%;
+  /* height: 100%; */
 }
 
 .blocks-wrapper {
@@ -62,4 +63,56 @@ body {
 
 .stand-section {
   width: 100%;
+}
+
+/* ABOUT HESTIA - CITY BACKGROUND & PARALAXING */
+
+.about-hestia > .city-float-pages img {
+  box-sizing: border-box;
+  height: auto;
+  max-width: 50%;
+  vertical-align: bottom;
+}
+
+.parallax-bg-container {
+  background-image: url("/images/city-bldgs.jpeg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  min-height: 400px;
+  filter: grayscale(0%);
+}
+
+.parallax-bg-container > .parallax-bg-content {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  color: #fff;
+
+  font-family: "Roboto Slab", "Times New Roman", serif;
+}
+
+/* ABOUT HESTIA PARAGRAPH */
+.p {
+  font-size: 18px;
+  /* font-family: "roboto slab", "helvetica", arial, sans-serif; */
+}
+
+.span {
+  font-weight: 700;
+}
+
+.city-hestia {
+  display: flex;
+}
+
+.city-float-pages img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
+img {
+  width: 50%;
+  height: 20%;
 }
