--- a/Styles/blog.css
+++ b/Styles/blog.css
@@ -1,3 +1,12 @@
+html,
+body {
+  margin: 0%;
+  height: 100%;
+  background-color: rgb(219, 219, 219);
+  z-index: 5;
+  position: relative;
+}
+
 h1 {
   font-size: 18px;
   color: white;
@@ -19,7 +28,6 @@ h1 {
 
 .main-container {
   background-color: white;
-  height: 100%;
   max-width: 100%;
   margin: 0px 40px 0px 40px;
   border-radius: 10px;
@@ -28,5 +36,19 @@ h1 {
   box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
   -webkit-box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
   -moz-box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
-  /* display: grid; */
+  display: grid;
+  grid-auto-rows: auto;
+}
+
+.main-container > .blog-main-contain {
+  grid-template-rows: auto;
+}
+
+/* FOOTER */
+.footer-container {
+  display: flex;
+  background-color: rgb(91, 91, 91);
+  position: relative;
+  z-index: 3;
+  min-height: 40vh;
 }
