--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -6,6 +6,19 @@
 
 .contact-info-map iframe {
   width: 100%;
-  position: fixed;
-  height: 200px;
+  /* position: fixed; */
+  height: 300px;
+  display: flex;
+}
+
+.contact-flex-container {
+  width: auto;
+  height: auto;
+  display: flex;
+}
+
+.contact-container {
+  min-height: 100%;
+  background-color: white;
+  position: center;
 }
