--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -10,6 +10,7 @@ body {
 .nav-home-container {
   display: flex;
   color: rgb(0, 0, 0);
+  background-color: #fff;
 }
 
 .nav-home-container > .hestia-wrapper > .hestia-name,
@@ -49,7 +50,6 @@ body {
 /* Gray background behind what we stand for */
 .white-background-container {
   background-color: rgb(255, 255, 255);
-
   position: absolute;
   z-index: 2;
   width: 90%;
