--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -6,93 +6,83 @@ body {
 
 /* PARALLAX */
 .parallax-hero-container {
-  background-image: url("images/lady-lib-unsplash.jpg");
   min-height: 100%;
+  background-image: url("/images/lady-lib-unsplash.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   color: white;
+  filter: opacity(0.8);
 }
-
-.parallax-hero-container,
-.parallax-hero-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.parallax-hero-container .parallax-hero-content {
+  position: relative;
   color: black;
-  padding: 12px 24px;
-  background-color: blanchedalmond;
-  opacity: 8;
+  padding: 80px;
+  width: 100%;
+  text-align: center;
   font-size: 1.25rem;
-  letter-spacing: 10px;
 }
 
-/* Gray background behind what we stand for */
-.white-background-container {
+.stand-section {
   background-color: rgb(255, 255, 255);
-  position: absolute;
-  z-index: 2;
+  position: relative;
   width: 90%;
-  /* height: 100%; */
+  height: 300px;
+  top: -50px;
+  z-index: 1;
+  margin: auto;
+  border-radius: 16px;
+  text-align: center;
 }
 
 .blocks-wrapper {
   display: flex;
+  padding: 20px;
+  text-align: center;
+  padding: 50px;
 }
-
-/* What we stand for */
-.stand-section {
-  width: 100%;
+.blocks-wrapper .p {
+  font-size: 14px;
+  font-weight: 100;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  color: rgb(173, 173, 173);
 }
-
-/* ABOUT HESTIA - CITY BACKGROUND & PARALAXING */
-.about-hestia > .city-float-pages img {
-  box-sizing: border-box;
-  height: auto;
-  max-width: 50%;
-  vertical-align: bottom;
-}
-
-.parallax-bg-container {
-  background-image: url("images/city-bldgs.jpeg");
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  min-height: 400px;
-  filter: grayscale(0%);
-}
-
-.parallax-bg-container > .parallax-bg-content {
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  color: #fff;
+.blocks-wrapper .h5 {
+  font-size: 18px;
+  font-weight: 700;
   font-family: "Roboto Slab", "Times New Roman", serif;
 }
 
-/* ABOUT HESTIA PARAGRAPH */
-.p {
-  font-size: 18px;
-  /* font-family: "roboto slab", "helvetica", arial, sans-serif; */
+.pinkgrid > .blue-grid > .green-grid {
+  padding: 0 18px 18px 0;
 }
 
-.span {
-  font-weight: 700;
+/* ABOUT HESTIA - CITY BACKGROUND & PARALAXING */
+.parallax-bg-container {
+  background-image: url("/images/city-bldgs.jpeg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  min-height: 250px;
+  filter: grayscale(25%);
+  position: relative;
+  z-index: 2;
+  display: flex;
 }
 
-.city-hestia {
+.parallax-bg-content {
+  position: relative;
+  top: 50%;
+  left: 10%;
+  width: 500px;
+  padding-top: 80px;
+  color: #fff;
+  font-family: "Roboto Slab", "Times New Roman", serif;
   display: flex;
 }
 
 .city-float-pages img {
-  height: auto;
-  max-width: 100%;
-  vertical-align: bottom;
-}
-
-img {
-  width: 50%;
-  height: 20%;
+  flex-wrap: wrap;
+  width: 500px;
 }/*# sourceMappingURL=home.css.map */
