--- a/styles/blog/blog.scss
+++ b/styles/blog/blog.scss
@@ -19,53 +19,33 @@ body {
   padding-top: 8%;
 }
 
-.h1 {
+.h1,
+h6 {
   @include all-page-headers();
 }
-.blog-container {
-  background-color: rgb(234, 57, 111);
-  height: 100%;
-  z-index: -1;
-  position: relative;
+
+
+
+  // color: rgb(0, 0, 0);
+  // z-index: 1;
+  // position: fixed;
+  // background-color: rgb(255, 255, 255);
+  // box-shadow: -1px -1px 20px -4px rgb(0 0 0 / 78%);
+  // width: 100%;
+  // top: 0px;
+  // line-height: 30px;
 }
 
-.blog-main-contain {
-  padding: 150px;
-}
-
-.main-container > .blog-main-contain {
-  background-color: white;
-  max-width: 100%;
-  margin: 0px 40px 0px 40px;
-  border-radius: 10px;
-  position: relative;
-  top: -150px;
-  box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
-  -webkit-box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
-  -moz-box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
-  display: grid;
-  grid-auto-rows: auto;
-}
-
-/* FOOTER */
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgb(91, 91, 91);
-  position: relative;
-  z-index: 3;
-  min-height: 40vh;
-  top: -200px;
-  color: white;
-  padding: 0 150px 0 150px;
-  align-items: center;
-}
-
-.left-footer {
-  display: flex;
-  justify-content: space-between;
-}
-.right-footer {
-  display: flex;
-  justify-content: space-evenly;
-}
+// .main-container-main  {
+//   background-color: white;
+//   max-width: 100%;
+//   margin: 0px 40px 0px 40px;
+//   border-radius: 10px;
+//   position: relative;
+//   top: -150px;
+//   box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
+//   -webkit-box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
+//   -moz-box-shadow: -1px -1px 13px -4px rgba(0, 0, 0, 0.78);
+//   display: grid;
+//   grid-auto-rows: auto;
+// }
