--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -86,7 +86,7 @@ body {
   background-position: center;
   background-size: cover;
   min-height: 250px;
-  filter: grayscale(25%);
+  padding-bottom: 50px;
   position: relative;
   z-index: 2;
   display: flex;
@@ -111,5 +111,37 @@ body {
 // BOTTOM BLOG SECTION
 
 .blog-container-main {
+  width: 100%;
+  .blog-head-wrapper {
+    display: flex;
+  }
+}
+
+// FOOTER
+
+.footer-container {
   display: flex;
+  width: 100%;
+}
+
+.footer-wrapper {
+  display: inline-block;
+  background-color: rgb(90, 90, 90);
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  justify-content: space-between;
+  margin-top: 200px;
+  height: 70px;
+  align-items: center;
+  padding: 0 70px;
+  width: 100%;
+  box-shadow: inset 0 0.25px 5px rgb(159, 159, 159);
+
+  .left-footer a {
+    padding: 10px 10px;
+    display: inline-flex;
+  }
+  .right-footer {
+    text-align: right;
+  }
 }
