--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -29,15 +29,18 @@ body {
   color: #fff;
 }
 
-.stand-section {
+.stand-section h2 {
   background-color: rgb(255, 255, 255);
   position: relative;
   width: 90%;
-  height: 300px;
+  height: 80px;
   top: -50px;
   z-index: 1;
   margin: auto;
   border-radius: 16px;
+  padding-top: 80px;
+  font-size: 32px;
+  font-family: "Roboto Slab", "Times New Roman", serif;
   text-align: center;
 }
 
@@ -69,7 +72,7 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  min-height: 250px;
+  min-height: 150px;
   padding-bottom: 50px;
   position: relative;
   z-index: 2;
@@ -94,33 +97,20 @@ body {
 
 .blog-container-main {
   width: 100%;
-}
-.blog-container-main .blog-head-wrapper {
-  display: flex;
+  height: 50px;
 }
 
-.footer-container {
-  display: flex;
-  width: 100%;
+.blog-head-wrapper h2 {
+  text-align: center;
+  font-size: 32px;
+  font-family: "Roboto Slab", "Times New Roman", serif;
 }
 
-.footer-wrapper {
-  display: inline-block;
-  background-color: rgb(90, 90, 90);
-  font-family: arial, sans-serif;
-  font-size: 14px;
-  justify-content: space-between;
-  margin-top: 200px;
-  height: 70px;
-  align-items: center;
-  padding: 0 70px;
-  width: 100%;
-  box-shadow: inset 0 0.25px 5px rgb(159, 159, 159);
-}
-.footer-wrapper .left-footer a {
-  padding: 10px 10px;
-  display: inline-flex;
-}
-.footer-wrapper .right-footer {
-  text-align: right;
+.uncategorized-wrapper {
+  display: grid;
+  grid-row: 1fr, 1r, 1fr;
+  background-color: honeydew;
+  row-gap: 20px;
+  padding: 20px;
+  text-align: center;
 }/*# sourceMappingURL=home.css.map */
