--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -2,6 +2,7 @@ html,
 body {
   margin: 0%;
   height: 100%;
+  background-color: rgb(200, 200, 200);
 }
 
 @mixin align-h-and-p {
@@ -39,25 +40,29 @@ body {
 
   .parallax-hero-content {
     position: relative;
-    color: black;
-    padding: 80px;
-    width: 100%;
+    padding-top: 100px;
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 30px;
+    font-family: "Lato", sans-serif;
+    font-family: "Lora", serif;
+    font-family: "Roboto", sans-serif;
+    font-family: "Signika Negative", sans-serif;
   }
-  .h1 {
-    font-size: 67px;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    color: #fff;
+  .span {
+    font-size: 18px;
   }
 }
 
 // WHAT WE STAND FOR SECTION
 
+.white-background-container {
+  margin: 0 40px 0 40px;
+  background-color: #fff;
+}
+
 .stand-section h2 {
   background-color: rgb(255, 255, 255);
   position: relative;
-  width: 90%;
   height: 80px;
   top: -50px;
   z-index: 1;
@@ -113,9 +118,29 @@ body {
 
 // BOTTOM BLOG SECTION
 
+@mixin uncat-headers {
+  font-size: 12px;
+  font-family: "Roboto Slab, helvetica, Arial";
+  text-transform: uppercase;
+}
+
+@mixin blog-categories {
+  font-size: 18px;
+  font-family: "Roboto Slab, helvetica, Arial";
+}
+
+@mixin blog-paragraphs {
+  font-size: 15px;
+  font-family: "Roboto Slab, helvetica, Arial";
+  font-weight: 300;
+  line-height: 1.6;
+  color: rgb(224, 224, 224);
+}
+
 .blog-container-main {
   width: 100%;
   height: 50px;
+  background-color: #fff;
 }
 
 .blog-head-wrapper h2 {
@@ -124,11 +149,24 @@ body {
   font-family: "Roboto Slab", "Times New Roman", serif;
 }
 
-.uncategorized-wrapper {
+.section-blog {
   display: grid;
-  grid-row: 1fr, 1r, 1fr;
-  background-color: honeydew;
-  row-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 200px;
+  row-gap: 10px;
   padding: 20px;
   text-align: center;
+
+  .uncategorized {
+    column-gap: 10%;
+    @include uncat-headers();
+  }
+
+  .content h6 {
+    @include blog-categories();
+  }
+
+  .p {
+    @include blog-paragraphs();
+  }
 }
